--- a/.github/workflows/sub.yml
+++ b/.github/workflows/sub.yml
@@ -9,9 +9,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: 1. 변수출력
       env:
-        NAME: 'DongHo.shin' 
+        NAME: 'DongHo.Shin' 
       run: echo "내 이름은 $NAME 입니다."
-#    - name: 2. 변수출력
-#      env:
-#        ID: ${{ github.actor }} 
-#      run: echo "내 이름은 $NAME, 내 아이디는 $ID 입니다."
+    - name: 2. 변수출력
+      env:
+        ID: ${{ github.actor }} 
+      run: echo "내 이름은 $NAME, 내 아이디는 $ID 입니다."
